// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Nav List - Trigger item active update 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="default"
    >
      <ul
        className="pf-c-nav__list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link1"
          onClick={null}
          preventDefault={false}
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link2"
          onClick={null}
          preventDefault={false}
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link3"
          onClick={null}
          preventDefault={false}
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link4"
          onClick={null}
          preventDefault={false}
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Default Nav List 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="default"
    >
      <ul
        className="pf-c-nav__list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link1"
          onClick={null}
          preventDefault={false}
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link2"
          onClick={null}
          preventDefault={false}
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link3"
          onClick={null}
          preventDefault={false}
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link4"
          onClick={null}
          preventDefault={false}
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List - Trigger toggle 1`] = `
.pf-c-nav__toggle {
  display: block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  margin-left: auto;
  font-size: 1rem;
  line-height: 1;
  pointer-events: none;
  border: 0px;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav__subnav {
  display: block;
  max-height: 0;
  margin-top: 0px;
  overflow: hidden;
  opacity: 0;
}
.pf-c-nav__item.pf-m-expanded.expandable-group {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="default"
    >
      <ul
        className="pf-c-nav__list"
      >
        <NavExpandable
          className="expandable-group"
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={true}
          srText=""
          title="Section 1"
        >
          <NavToggle
            defaultValue={true}
            groupId={null}
            onToggle={[Function]}
          >
            <li
              className="pf-c-nav__item pf-m-expanded expandable-group"
              onClick={[Function]}
            >
              <a
                aria-expanded={true}
                className="pf-c-nav__link"
                data-component="pf-nav-expandable"
                href="#"
                id="grp-1"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                Section 1
                <span
                  className="pf-c-nav__toggle"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    size="sm"
                    title={null}
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </a>
              <section
                aria-labelledby="grp-1"
                className="pf-c-nav__subnav"
                hidden={null}
              >
                <ul
                  className="pf-c-nav__simple-list"
                >
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link1"
                    onClick={null}
                    preventDefault={false}
                    to="#link1"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link1"
                        onClick={[Function]}
                      >
                        Link 1
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link2"
                    onClick={null}
                    preventDefault={false}
                    to="#link2"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link2"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link3"
                    onClick={null}
                    preventDefault={false}
                    to="#link3"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link3"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link4"
                    onClick={null}
                    preventDefault={false}
                    to="#link4"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link4"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                  </NavItem>
                </ul>
              </section>
            </li>
          </NavToggle>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List 1`] = `
.pf-c-nav__toggle {
  display: block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  margin-left: auto;
  font-size: 1rem;
  line-height: 1;
  pointer-events: none;
  border: 0px;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav__subnav {
  display: block;
  max-height: 0;
  margin-top: 0px;
  overflow: hidden;
  opacity: 0;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="default"
    >
      <ul
        className="pf-c-nav__list"
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText=""
          title="Section 1"
        >
          <NavToggle
            defaultValue={false}
            groupId={null}
            onToggle={[Function]}
          >
            <li
              className="pf-c-nav__item"
              onClick={[Function]}
            >
              <a
                aria-expanded={false}
                className="pf-c-nav__link"
                data-component="pf-nav-expandable"
                href="#"
                id="grp-1"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                Section 1
                <span
                  className="pf-c-nav__toggle"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    size="sm"
                    title={null}
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </a>
              <section
                aria-labelledby="grp-1"
                className="pf-c-nav__subnav"
                hidden={true}
              >
                <ul
                  className="pf-c-nav__simple-list"
                >
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link1"
                    onClick={null}
                    preventDefault={false}
                    to="#link1"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link1"
                        onClick={[Function]}
                      >
                        Link 1
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link2"
                    onClick={null}
                    preventDefault={false}
                    to="#link2"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link2"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link3"
                    onClick={null}
                    preventDefault={false}
                    to="#link3"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link3"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link4"
                    onClick={null}
                    preventDefault={false}
                    to="#link4"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link4"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                  </NavItem>
                </ul>
              </section>
            </li>
          </NavToggle>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List with aria label 1`] = `
.pf-c-nav__toggle {
  display: block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  margin-left: auto;
  font-size: 1rem;
  line-height: 1;
  pointer-events: none;
  border: 0px;
}
.pf-c-nav__link {
  display: block;
}
.pf-u-sr-only {
  display: block;
  position: fixed;
  overflow: hidden;
  clip: rect(0px, 0px, 0px, 0px);
  white-space: nowrap;
  border: 0px;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav__subnav {
  display: block;
  max-height: 0;
  margin-top: 0px;
  overflow: hidden;
  opacity: 0;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="default"
    >
      <ul
        className="pf-c-nav__list"
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText="Section 1 - Example sub-navigation"
          title="Section 1"
        >
          <NavToggle
            defaultValue={false}
            groupId={null}
            onToggle={[Function]}
          >
            <li
              className="pf-c-nav__item"
              onClick={[Function]}
            >
              <a
                aria-expanded={false}
                className="pf-c-nav__link"
                data-component="pf-nav-expandable"
                href="#"
                id={null}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                Section 1
                <span
                  className="pf-c-nav__toggle"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    size="sm"
                    title={null}
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </a>
              <section
                aria-labelledby="grp-1"
                className="pf-c-nav__subnav"
                hidden={true}
              >
                <h2
                  className="pf-u-sr-only"
                  id="grp-1"
                >
                  Section 1 - Example sub-navigation
                </h2>
                <ul
                  className="pf-c-nav__simple-list"
                >
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link1"
                    onClick={null}
                    preventDefault={false}
                    to="#link1"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link1"
                        onClick={[Function]}
                      >
                        Link 1
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link2"
                    onClick={null}
                    preventDefault={false}
                    to="#link2"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link2"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link3"
                    onClick={null}
                    preventDefault={false}
                    to="#link3"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link3"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                  </NavItem>
                  <NavItem
                    className=""
                    groupId={null}
                    isActive={false}
                    itemId={null}
                    key="#link4"
                    onClick={null}
                    preventDefault={false}
                    to="#link4"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link4"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                  </NavItem>
                </ul>
              </section>
            </li>
          </NavToggle>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Horizontal Nav List 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__horizontal-list {
  display: inline-flex;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="horizontal"
    >
      <ul
        className="pf-c-nav__horizontal-list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link1"
          onClick={null}
          preventDefault={false}
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link2"
          onClick={null}
          preventDefault={false}
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link3"
          onClick={null}
          preventDefault={false}
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link4"
          onClick={null}
          preventDefault={false}
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Nav Grouped List 1`] = `
.pf-c-nav__section-title {
  display: block;
  padding: 0.5rem 2rem 0.5rem 2rem;
  font-size: 0.875rem;
  font-weight: 500;
  color: #72767b;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav__section {
  display: block;
}
.pf-c-nav__section-title {
  display: block;
  padding: 0.5rem 2rem 0.5rem 2rem;
  font-size: 0.875rem;
  font-weight: 500;
  color: #72767b;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__list {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav__section {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavGroup
      className=""
      id="grp-1"
      title="Section 1"
    >
      <section
        aria-labelledby="grp-1"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-1"
        >
          Section 1
        </h2>
        <ul
          className="pf-c-nav__simple-list"
        >
          <NavList
            className=""
            isTall={false}
            variant="default"
          >
            <ul
              className="pf-c-nav__list"
            >
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section1_#link1"
                onClick={null}
                preventDefault={false}
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section1_#link2"
                onClick={null}
                preventDefault={false}
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section1_#link3"
                onClick={null}
                preventDefault={false}
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section1_#link4"
                onClick={null}
                preventDefault={false}
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
    <NavGroup
      className=""
      id="grp-2"
      title="Section 2"
    >
      <section
        aria-labelledby="grp-2"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-2"
        >
          Section 2
        </h2>
        <ul
          className="pf-c-nav__simple-list"
        >
          <NavList
            className=""
            isTall={false}
            variant="default"
          >
            <ul
              className="pf-c-nav__list"
            >
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section2_#link1"
                onClick={null}
                preventDefault={false}
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section2_#link2"
                onClick={null}
                preventDefault={false}
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section2_#link3"
                onClick={null}
                preventDefault={false}
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                className=""
                groupId={null}
                isActive={false}
                itemId={null}
                key="section2_#link4"
                onClick={null}
                preventDefault={false}
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
  </nav>
</Nav>
`;

exports[`Nav List with custom item nodes 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__tertiary-list {
  display: inline-flex;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="tertiary"
    >
      <ul
        className="pf-c-nav__tertiary-list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          onClick={null}
          preventDefault={false}
          to="/components/nav#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <CustomNode
              aria-current={null}
              className="pf-c-nav__link"
              onClick={[Function]}
            >
              <div>
                My custom node
              </div>
            </CustomNode>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Simple Nav List 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__simple-list {
  display: block;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="simple"
    >
      <ul
        className="pf-c-nav__simple-list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link1"
          onClick={null}
          preventDefault={false}
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link2"
          onClick={null}
          preventDefault={false}
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link3"
          onClick={null}
          preventDefault={false}
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link4"
          onClick={null}
          preventDefault={false}
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Tertiary Nav List 1`] = `
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__link {
  display: block;
}
.pf-c-nav__item {
  display: block;
}
.pf-c-nav__tertiary-list {
  display: inline-flex;
}
.pf-c-nav {
  display: block;
  overflow-x: auto;
}

<Nav
  aria-label="Test"
  className=""
  onSelect={[Function]}
  onToggle={[Function]}
>
  <nav
    aria-label="Test"
    className="pf-c-nav"
    onSelect={[Function]}
    onToggle={[Function]}
  >
    <NavList
      className=""
      isTall={false}
      variant="tertiary"
    >
      <ul
        className="pf-c-nav__tertiary-list"
      >
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link1"
          onClick={null}
          preventDefault={false}
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link2"
          onClick={null}
          preventDefault={false}
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link3"
          onClick={null}
          preventDefault={false}
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className=""
          groupId={null}
          isActive={false}
          itemId={null}
          key="#link4"
          onClick={null}
          preventDefault={false}
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;
